# ai-conversation-simulator

./: .env.example  README.md  config_simulate_conversation.py  pyproject.toml  requirements.txt  simulate_conversation.py  utils.py
.cursor/rules/: uv.mdc
